Fixed tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,22 +9,18 @@ set-option -g default-terminal "screen-256color"
 
 # Pane
 set-option -g status-position top
-set-option -g message-fg colour236
-set-option -g message-bg colour208
+set-option -g message-style "fg=colour236 bg=colour208"
 set -g status-fg colour208
 set -g status-bg colour236
 
 set-window-option -g status-left ""
-set-window-option -g status-left-fg colour208
-set-window-option -g status-left-bg colour236
 
 set-window-option -g status-right " %Y/%m/%d %H:%M "
-set-window-option -g status-right-fg colour208
-set-window-option -g status-right-bg colour236
 
 set-window-option -g window-status-format " #I: #W "
 
 set-window-option -g window-status-current-format " #I: #W "
-set-window-option -g window-status-current-fg colour236
-set-window-option -g window-status-current-bg colour208
+set-window-option -g window-status-current-style "fg=colour236 bg=colour208"
 
+# Vim
+set-option -s escape-time 0
