--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,13 @@ set -g base-index 1
 
 # Tmux colours
 set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',iTerm.app:RGB'
 
 # Pane
 set-option -g status-position top
-set-option -g message-style "fg=colour236 bg=colour208"
-set -g status-fg colour208
-set -g status-bg colour236
+set-option -g message-style "fg=colour238 bg=colour173"
+set -g status-fg colour173
+set -g status-bg colour238
 
 set-window-option -g status-left ""
 
@@ -20,7 +21,7 @@ set-window-option -g status-right " %Y/%m/%d %H:%M "
 set-window-option -g window-status-format " #I: #W "
 
 set-window-option -g window-status-current-format " #I: #W "
-set-window-option -g window-status-current-style "fg=colour236 bg=colour208"
+set-window-option -g window-status-current-style "fg=colour238 bg=colour173"
 
 # Vim
 set-option -s escape-time 0
